# VidGnost

./: .gitattributes  .gitignore  .impeccable.md  .npmignore  .prettierignore  .prettierrc.json  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all.ps1  start-all.sh  tsconfig.base.json
backend/: .gitignore  main.py  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  main.py  models.py  runtime_stdio.py  schemas.py
backend/app/api/: error_handlers.py  routes_config.py  routes_health.py  routes_runtime.py  routes_self_check.py  routes_tasks.py  routes_vqa.py
backend/app/services/: async_utils.py  developer_log_service.py  (+47 more)
backend/storage/: config.toml  model_config.json
backend/tests/: conftest.py  test_config.py  test_developer_log_service.py  test_events.py  test_file_storage_layout.py  test_gpu_stage_worker.py  test_gpu_stage_worker_client.py  test_health.py  test_llm_connectivity.py  test_model_catalog_store.py  test_model_download_service.py  test_model_migration_service.py  test_model_runtime_manager.py  test_ollama_service_manager.py  test_prompt_template_store.py  test_remote_model_client.py  test_resource_guard.py  test_self_check.py  test_startup_cleanup.py  test_summarizer.py  test_summarizer_prompt_templates.py  test_task_preflight.py  test_task_runner_utils.py  test_task_store_index.py  test_tasks.py  test_ui_settings_store.py  test_vqa_api.py  test_vqa_model_runtime.py  test_vqa_retriever.py  test_vqa_streaming.py  test_whisper_gpu_runtime_service.py  test_whisper_runtime_config.py
(+436 files in other folders)
