[project]
name = "vidgnost-backend"
version = "0.1.0"
description = "Standard dependency configuration file for vidgnost-backend "
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiofiles>=25.1.0",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "httpx[http2]>=0.28.1",
    "openai>=2.30.0",
    "orjson>=3.11.7",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
    "yt-dlp>=2026.3.17",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "storage/model-hub",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
